Make a few changes to Introduction and send to John. John really likes this Introduction, so no further revisions necessary!

--- a/ack.tex
+++ b/ack.tex
@@ -9,6 +9,7 @@
 %---------------------------------------------------------------------------------------%
 
 \indent \indent This dissertation is the fulfillment of a childhood dream that would not have come true without the selfless dedication of countless people.
+The list of all of the people who have helped me along the way is far too lengthy to include here, so below I acknowledge only those who were particularly influential on this journey.
 
 First I thank my advisor, Dr. John Molinari, for his unswerving kindness, humility, and patience over these past six years.  
 Former students have described him as a "brilliant scientist and an even better man," an assessment with which I wholeheartedly concur.  
@@ -26,11 +27,11 @@ I also owe a tremendous debt to Dr. Steven Lazarus and Michael Splitt of the Flo
 I am grateful for the support and friendship of all of the DAES graduate students, particularly Travis Elless, Stephanie Stevenson, Oscar Chimborazo, Steven Fuhrman, Ahmed Shaaban, Sarah Ditchek, Matthew Vaughan, Michael Fischer, Hannah Attard, Josh Alland, Chen Yuan-Ming, and Connor Nelson.  
 Their friendship and encouragement over these years has meant a lot to me.
 I owe a special thanks to Chip Helms for not only being a fantastic friend, but for innumerable stimulating conversations, and for introducing me to so many people in the tropical meteorology community.  
-Thanks also to research associate Dave Vollaro, whose guidance during my first year of graduate school greatly accelerated my development as a programmer, and whose baseball knowledge far surpassed mine.
+Thanks also to research associate Dave Vollaro, whose guidance during my first year of graduate school greatly accelerated my development as a programmer, and who always made time to provide advice or insight every time I stopped by his office.
 
-I owe a special thanks to Dr. Richard Schneible of the College of Business for showing me that it is possible to be both a successful academic and a committed husband and father.
-Likewise, my siblings Andy, LeAna, and Matthew and their spouses Lisa, Jake, and Melissa are some of the best role models a youngest child could ask for.
+%I owe a special thanks to Dr. Richard Schneible of the College of Business for showing me that it is possible to be both a successful academic and a committed husband and father.
+%Likewise, my siblings Andy, LeAna, and Matthew and their spouses Lisa, Jake, and Melissa are some of the best role models a youngest child could ask for.
 
 Last and most importantly, I thank my fianc\'ee, Erika Navarro, for her constant love and support, and my parents for the innumerable sacrifices that they have made on my behalf.
-Their gentle encouragement always pushed me to achieve my greatest potential, and their belief in me provided indispensible sustenance during times of hardship. 
+Their gentle encouragement always pushed me to achieve my greatest potential, and their belief in me provided indispensable sustenance during times of hardship. 
 This work is dedicated to them.
