--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -86,6 +86,13 @@
 @STRING{WMOB      = "WMO Bull."}
 
 
+@misc{AMSglossary,
+author = {{American Meteorological Society}},
+year   = {2012},
+title  = {{Significant level. Glossary of Meteorology}},
+note   = {{[Available online at \url{http://glossary.ametsoc.org/wiki/Significant\_level}]}}
+}
+
 @misc{BellTCI,
 author = {Bell, Michael M. and Doyle, J. D. and Beaubein, M. and Allen, T. and Brown, B. R. and Dunion, J. P. and Duran, P. and Feldmeier, J. W. and Harrison, L. C. and Hendricks, E. A. and Jeffries, W. and Komaromi, W. A. and Martinez, J. and Molinari, J. and Moskaitis, J. R. and Stern, D. P. and Vollaro, D.},
 title={Office of {N}aval {R}esearch {T}ropical {C}yclone {I}ntensity ({TCI}) 2015 {NASA WB}-57 {H}igh {D}ensity {D}ropsonde {S}ounding {S}ystem ({HDSS}) Data, Version 1.0},
@@ -102,7 +109,7 @@ pages = {233-240}
 }
 
 @article{Blacketal2007,
-author = {Black, P. G. and Coauthors},
+author = {Black, P. G. and E. A. D'Asaro and W. M. Drennen and J. R. French and P. P. Niiler and T. B. Sanford and E. J. Terrill and E. J. Walsh and J. A. Zhang},
 year = {2007},
 title = {{Air–sea exchange in hurricanes: Synthesis of observations from the Coupled Boundary Layer Air–Sea Transfer experiment}},
 journal = BAMS,
