--- a/dissertation.tex
+++ b/dissertation.tex
@@ -28,7 +28,7 @@
 \titlepage
 %\copyrightpage
 
-
+%\include{signature_page}
 \include{abstract}  %this is your abstract.tex file
 \include{ack}  %this is ack.tex file (acknowledgements)
 \tableofcontents        %these will be created automatically
@@ -38,7 +38,7 @@
 \include{patricia}
 \include{modeling}
 \include{hs3}
-%\include{conclusions}
+\include{conclusions}
 % ...
 % Add new \include{chapterX} statements for each chapter you add
 %\include{appendix}
