A few edits to hs3.tex.

--- a/hs3.tex
+++ b/hs3.tex
@@ -48,39 +48,39 @@ Temperature soundings from these three dropsondes are depicted in Fig. \ref{fig:
 
 All three soundings were fairly similar below the 200-mb level, but the temperature profiles differed considerably above that level.
 The 150-200-mb layer was warmer on the edge of the cirrus canopy (magenta) than within the cirrus canopy (green, blue).
-Both soundings deployed within the cirrus canopy (green,blue) exhibited very similar temperature profiles in this layer, with nearly dry-adiabatic lapse rates.
+Both soundings deployed within the cirrus canopy (green, blue) exhibited very similar temperature profiles in this layer, with nearly dry-adiabatic lapse rates.
 Just above the 150-mb layer, the sounding deployed within the coldest cloud tops (blue) exhibited a temperature inversion.
-The other cirrus-canopy sounding (green) also exhibited a temperature inversion, but it was higher than that observed within the region of coldest cloud tops (blue).
+The other cirrus-canopy sounding (green) also exhibited a temperature inversion, but it was at a higher altitude than that observed within the region of coldest cloud tops (blue).
 The difference in the height of these inversion layers corresponded to a maximum temperature difference of 4 K within this layer.
 Above the inversion layers, however, the two soundings converged and exhibited very similar temperature profiles, including a nearly-identical cold point that was slightly warmer than that observed on the edge of the cirrus canopy (magenta).
-These soundings imply that strong horizontal gradients of temperature and stability might have existed in the upper levels of Hurricane Nadine.
+These soundings indicate that strong horizontal gradients of temperature and stability might existed in the upper levels of Hurricane Nadine.
 
 Cross sections of squared Brunt-V{\"a}is{\"a}l{\"a} frequency ($N^2$; 10\textsuperscript{-4} s\textsuperscript{-2}) constructed using two sets of dropsondes are shown in Fig. \ref{fig:nadine-n2}.
 The first set consisted of dropsondes (Fig. \ref{fig:nadine-n2}a) that were deployed primarily within and near Nadine's cirrus canopy.
-The other set of dropsondes was deployed outside of Nadine's cirrus canopy, upshear of the center of circulation\footnote{According to the Statistical Hurricane Intensity Prediction Scheme (SHIPS; \citeauthor{DeMariaetal2005} \citeyear{DeMariaetal2005}) developmental database, the area-averaged, vortex-removed 850-200-mb wind shear at 00 UTC 15 September was from the southwest at 23 kt.}.
+The other set of dropsondes was deployed outside of Nadine's cirrus canopy, upshear of the center of circulation\footnote{According to the Statistical Hurricane Intensity Prediction Scheme (SHIPS; \citeauthor{DeMariaetal2005} \citeyear{DeMariaetal2005}) developmental database, the area-averaged, vortex-removed 850-200-mb wind shear at 00 UTC 15 September was 23 kt from the southwest.}.
 The cross-sections are constructed along the flight track, with each of the dropsonde deployment locations marked by bold black digits on the satellite images and along the horizontal axes of the cross sections.
 
 The dropsondes deployed within Nadine's cirrus canopy (Fig. \ref{fig:nadine-n2}a,b) detected two distinct static stability maxima in the 12-17-km layer.
 One maximum was associated with a rapid increase in $N^2$ above the cold-point tropopause, which was located near the 16-km level.
 This stability maximum is quite similar to that observed outside of the eye in Hurricane Patricia \citep{DuranMolinari2018} and is consistent with the tropopause inversion layer noted by \cite{Wirth2003}.
-The second existed within the 13.5-15-km layer, where a horizontally-extended region of enhanced static stability was present everwhere within Nadine's cirrus canopy.
+The second existed within the 13.5--15-km layer, where a horizontally-extended region of enhanced static stability was present everwhere within Nadine's cirrus canopy.
 Within this lower stable layer, $N^2$ was largest in the two soundings that were deployed at locations where the infrared brightness temperature was colder than -55\textdegree{}C (dropsondes number 4 and 7).
 The static stability also maximized at a slightly higher altitude in these two soundings (14.4 and 14.5 km) than in the other soundings, which showed an $N^2$ maximum closer to 14 km.
 
 The dropsondes deployed outside of Nadine's cirrus canopy (Fig. \ref{fig:nadine-n2}c,d) observed a considerably different upper-level static stability structure.
 The lower-stratospheric $N^2$ maximum observed near and above 16 km was not nearly as coherent as it was within the cirrus canopy.
-There existed numerous local $N^2$ maxima near and above 16 km, but rather than forming a horizontally-homogeneous stable layer above the tropopause, they were isolated from one another.
+There existed numerous local $N^2$ maxima near and above 16 km, but rather than forming a horizontally-homogeneous stablity maximum above the tropopause, the maxima were isolated from one another.
 Likewise, there were a few weak, isolated local maxima in $N^2$ within the 12-15-km layer, but the distinct secondary stable layer that was observed within the cirrus canopy did not exist outside of the cirrus canopy.
 
 These observations suggest that there might be processes unique to the TC cirrus canopy that produce stronger static stability above the cold-point tropopause and a secondary stability maximum below the tropopause.
 
-\subsection{The relationship between infrared brightness temperature and the tropopause-layer temperature structure obseved by HS3 dropsondes}
+\subsection{The relationship between infrared brightness temperature and the tropopause-layer temperature profile obseved by HS3 dropsondes}
 To get a more general sense of the relationship between infrared brightness temperature and the upper-tropospheric static stability structure, all HS3 dropsondes deployed within 500 km of TCs were analyzed.
 The locations of these dropsondes relative to a composite TC center can be seen in Fig. \ref{fig:hs3-scatterplot}.
 Only 26 of these observations were collected in tropical depressions, whereas 296 and 241 were collected in tropical storms and hurricanes, respectively.
 The highest dropsonde density was within the innermost 100 km, but all radial bands and storm quadrants were sampled.
 Each of these dropsondes was assigned an infrared brightness temperature by picking the satellite image pixel closest to the dropsonde deployment in both space and time, using 4-km-resolution GOES-13 infrared satellite imagery obtained from the NOAA Comprehensive Large Array-data Stewardship System (CLASS; \url{http://www.class.ncdc.noaa.gov/}).
-The soundings were plotted on skew $T$--log$p$ diagrams and each sounding was assigned subjectively one of three classifications based on the upper-level temperature profile\footnote{These assignments were performed with no knowledge of the geographic location of the sounding, its location relative to a TC, or its infrared brightness temperature environment.}.
+The soundings were plotted on skew $T$--log $p$ diagrams and each sounding was assigned subjectively one of three classifications based on the upper-level temperature profile\footnote{These assignments were performed with no knowledge of the geographic location of the sounding, its location relative to a TC, or its infrared brightness temperature environment.}.
 Examples of each of the three classifications are plotted in Fig. \ref{fig:skewt-examples}.
 The "smooth tropopause" soundings (Fig. \ref{fig:skewt-examples}a) exhibited a temperature profile that transitioned smoothly from the upper troposphere to the lower stratosphere, whereas the "sharp tropopause" soundings (Fig. \ref{fig:skewt-examples}b) exhibited an abrupt transition near the tropopause.
 The "multiple stable layer" soundings exhibited multiple distinct static stability maxima in the upper troposphere, as indicated by oscillations in the temperature profile (Fig. \ref{fig:skewt-examples}c).
@@ -93,6 +93,7 @@ For example, 42\% of "sharp tropopause" soundings and 45\% of multiple stable la
 These distributions provide further evidence for a relationship between the infrared brightness temperature and the structure of the upper-tropospheric temperature profile.
 
 \subsection{The tropopause-layer temperature structure of TCs as observed by a large rawinsonde dataset}
+
 
 
 %---------------------------------------------------------------------------------------%
@@ -121,7 +122,7 @@ These distributions provide further evidence for a relationship between the infr
 %FIGURE 3%
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=39pc]{figures/nadine-skewt.png}}
-   \caption{(left) Infrared brightness temperature (\textdegree{}C) image of Hurricane Nadine at 2245 UTC 14 September 2012. Magenta, green, and blue stars represent dropsonde deployment locations corresponding to the three temperature soundings shown in the skew $T$--log$p$ diagram (right).}
+   \caption{(left) Infrared brightness temperature (\textdegree{}C) image of Hurricane Nadine at 2245 UTC 14 September 2012. Magenta, green, and blue stars represent dropsonde deployment locations corresponding to the three temperature soundings shown in the skew $T$--log $p$ diagram (right).}
 \label{fig:nadine-skewt}
 \end{figure*}
 
@@ -157,7 +158,7 @@ These distributions provide further evidence for a relationship between the infr
 %FIGURE 8%
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=39pc]{figures/t+dtdz+d2tdz2-intensity-montage.png}}
-\caption{Composite mean vertical profiles of (left) temperature (\textdegree{}C), (middle) the vertical temperature gradient (\textdegree{}C km\textsuperscript{-1}), and (right) the second derivative of temperature with respect to height (\textdegree{}C km\textsuperscript{-2}) composited about the cold-point tropopause height for (blue) tropical depressions and tropical storms and (red) hurricanes.}
+\caption{Composite-mean vertical profiles of (left) temperature (\textdegree{}C), (middle) the vertical temperature gradient (\textdegree{}C km\textsuperscript{-1}), and (right) the second derivative of temperature with respect to height (\textdegree{}C km\textsuperscript{-2}) composited about the cold-point tropopause height for (blue) tropical depressions and tropical storms and (red) hurricanes.}
 \label{fig:tline-int}
 \end{figure*}
 
