--- a/ack.tex
+++ b/ack.tex
@@ -9,13 +9,13 @@
 %---------------------------------------------------------------------------------------%
 
 \indent \indent This dissertation is the fulfillment of a childhood dream that would not have come true without the selfless dedication of countless people.
-The list of all of the people who have helped me along the way is far too lengthy to include here, so below I acknowledge only those who were particularly influential on this journey.
+The list of all of those who have helped me along the way is far too lengthy to include here, so here I acknowledge only individuals who were most influential on this journey.
 
-First I thank my advisor, Dr. John Molinari, for his unswerving kindness, humility, and patience over these past six years.  
+First I thank my advisor, Dr. John Molinari, for his unswerving kindness, humility, and patience.  
 Former students have described him as a "brilliant scientist and an even better man," an assessment with which I wholeheartedly concur.  
 I could not have asked for a better mentor, and am so grateful for the opportunities he has given to me.
 
-I also would like to thank my committee members - Drs. Kristen Corbosiero, Robert Fovell, Brian Tang, and Ryan Torn - for their guidance and support over these years.  
+I also would like to thank my committee members - Drs. Kristen Corbosiero, Robert Fovell, Brian Tang, and Ryan Torn - for their guidance and support.  
 Truly an academic all-star team, I will continue to look up to each of them as models of scientific brilliance.
 
 Thanks to all of the DAES faculty for building and carefully maintaining such a positive and constructive departmental culture.  
@@ -24,7 +24,7 @@ Nowhere was their dedication to students more evident than in their outstanding 
 
 I also owe a tremendous debt to Dr. Steven Lazarus and Michael Splitt of the Florida Institute of Technology, whose selfless investment in me as an undergraduate played a critical role in my academic development, and prepared me for PhD-level research and course work.
 
-I am grateful for the support and friendship of all of the DAES graduate students, particularly Travis Elless, Stephanie Stevenson, Oscar Chimborazo, Steven Fuhrman, Ahmed Shaaban, Sarah Ditchek, Matthew Vaughan, Michael Fischer, Hannah Attard, Josh Alland, Chen Yuan-Ming, and Connor Nelson.  
+I am grateful for the support and friendship of all of the DAES graduate students, particularly Travis Elless, Stephanie Stevenson, Oscar Chimborazo, Steven Fuhrman, Ahmed Shaaban, Sarah Ditchek, Matthew Vaughan, Michael Fischer, Hannah Attard, Josh Alland, Cheng Yuan-Ming, and Connor Nelson.  
 Their friendship and encouragement over these years has meant a lot to me.
 I owe a special thanks to Chip Helms for not only being a fantastic friend, but for innumerable stimulating conversations, and for introducing me to so many people in the tropical meteorology community.  
 Thanks also to research associate Dave Vollaro, whose guidance during my first year of graduate school greatly accelerated my development as a programmer, and who always made time to provide advice or insight every time I stopped by his office.
